syntax = "proto2";
package org.roylance.yadel;

enum UIYadelRequestType {
    REPORT_DAGS = 0;
    DELETE_DAG = 1;
}

message UIYadelRequest {
    optional UIYadelRequestType request_type = 1;
    optional string dag_id = 2;
    optional string token = 3;
    optional string user_name = 4;
    optional string password = 5;
}

message UIYadelResponse {
    optional string content = 1;
    optional UIDagReport report = 2;
    optional UIDag dag = 3;
    repeated UIWorkerConfiguration configurations = 4;
}

message UIDagReport {
    repeated UIWorkerConfiguration workers = 1;
    repeated UIDag dags = 2;
}

message UIDag {
    optional string id = 1;
    optional string display = 2;
    repeated UINode nodes = 3;
    repeated UIEdge edges = 4;
    optional bool is_completed = 5;
    optional bool is_processing = 6;
    optional bool is_error = 7;
    repeated string logs = 8;
    optional int32 number_completed = 9;
    optional int32 number_processing = 10;
    optional int32 number_errored = 11;
    optional int32 number_unprocessed = 12;
}

message UIEdge {
    optional string node_id_1 = 1;
    optional string node_id_2 = 2;
}

message UINode {
    optional string id = 1;
    optional string display = 2;
    optional int64 execution_date = 4;
    optional int64 start_date = 5;
    optional int64 end_date = 6;
    optional int64 duration = 7;
    optional bool is_completed = 8;
    optional bool is_processing = 9;
    optional bool is_error = 10;
    repeated string logs = 11;
}

message UIWorkerConfiguration {
    optional string ip = 1;
    optional string port = 2;
    optional string host = 3;
    optional uint64 initialized_time = 4;
    optional UIWorkerState state = 5;
}

enum UIWorkerState {
    CURRENTLY_WORKING = 0;
    CURRENTLY_IDLE = 1;
}